<resources>
    <string name="app_name">Github_sub2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukan kata</string>
    <string name="username">Ini Username</string>
    <string name="nama_dan_company">Ini Nama dan Company</string>
    <string name="location_dan_repository">Ini Location dan Repository</string>
    <string name="follower_dan_following">Ini follower dan following</string>
    <string name="nama">Ini Nama</string>
    <string name="company">Ini Company</string>
    <string name="avatar">Ini Avatar</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system">System</string>
    <string name="theme">Theme</string>

</resources>