<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:focusable="true"
    android:clickable="true"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/avatar"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_username"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_username"
            style="@style/TextContent"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/img_item_avatar"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/username"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_company"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_avatar" />

        <TextView
            android:id="@+id/tv_item_company"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/company"
            android:textAlignment="center"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_username" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>